Increase DUR column width from 50px to 65px to prevent cropping of longer values

--- a/src/styles.css
+++ b/src/styles.css
@@ -426,7 +426,7 @@ thead th {
 .col-lens { width: 65px; }
 .col-movement { width: 85px; }
 .col-props { width: 85px; }
-.col-duration { width: 50px; }
+.col-duration { width: 65px; }
 .col-calltime { width: 70px; }
 .col-endtime { width: 50px; }
 .col-overrun { width: 50px; }
